service banner alignment correction

--- a/style.css
+++ b/style.css
@@ -118,8 +118,10 @@ nav {
 
 /* Services */
 .services-banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 40vh;
-    margin: 20px 0;
     background-image: url(img/bg-2.jpg);
 }
 
@@ -128,12 +130,17 @@ nav {
     color: white;
     font-size: 2.5rem;
     text-shadow: 0.5px 0.5px black; 
+    padding: 10px;
+    margin: 0px;
 }
 
 .services-banner p {
     text-align: center;
     color: white;
+    font-size: 1.1rem;
     text-shadow: 0.5px 0.5px black;
+    padding: 10px;
+    margin: 0px;
 }
 
 .four-boxes {
